<?xml version="1.0"?>
<package format="3">
  <name>imu_calibration_pkg</name>
  <version>0.0.0</version>
  <description>Package defining custom IMU calibration services.</description>
  <maintainer email="rony.gabbai@gmail.com">rgabbai</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rosidl_default_generators</depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  
  <export>
    <build_type>ament_cmake</build_type>
    <member_of_group>rosidl_interface_packages</member_of_group>
  </export>
</package>
